--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/adapter-mariadb": "^6.12.0",
+    "@prisma/client": "^6.12.0",
     "classnames": "^2.5.1",
     "next": "15.4.3",
+    "prisma": "^6.12.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0"
