--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/adapter-mariadb": "^6.12.0",
     "@prisma/client": "^6.12.0",
+    "@radix-ui/themes": "^3.2.1",
     "classnames": "^2.5.1",
     "next": "15.4.3",
     "prisma": "^6.12.0",
