--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@prisma/adapter-mariadb": "^6.12.0",
     "@prisma/client": "^6.12.0",
     "@radix-ui/themes": "^3.2.1",
