--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@radix-ui/themes": "^3.2.1",
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
+    "delay": "^6.0.0",
     "next": "15.4.3",
     "prisma": "^6.12.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-simplemde-editor": "^5.2.0"
   },
   "devDependencies": {
