--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@prisma/adapter-mariadb": "^6.12.0",
     "@prisma/client": "^6.12.0",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
