--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.5.1",
     "delay": "^6.0.0",
     "next": "15.4.3",
+    "next-auth": "^4.24.11",
     "prisma": "^6.12.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
