--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^6.12.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
+    "@tanstack/react-query": "^5.84.0",
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
     "delay": "^6.0.0",
